Added new sub project to gooeyfi Added dialog for launching and editing module properties Added ModuleProperties class Removed GooeyFi references from RAT-STATS (will remove gooeyfi later)

--- a/products/GooeyFi/gooeyfi_builder/src/UIGooeyFiAppBuilder.ui
+++ b/products/GooeyFi/gooeyfi_builder/src/UIGooeyFiAppBuilder.ui
@@ -56,14 +56,68 @@
       <widget class="QListWidget" name="m_lstSourceWidgets"/>
      </item>
      <item>
-      <widget class="QPushButton" name="m_btnAdd">
-       <property name="text">
-        <string>Add</string>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="leftMargin">
+        <number>4</number>
        </property>
-      </widget>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
+        <number>4</number>
+       </property>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="m_btnAdd">
+         <property name="text">
+          <string>Add</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
      </item>
      <item>
-      <widget class="QTableWidget" name="m_tblDestinationWidgets"/>
+      <widget class="QTabWidget" name="m_twPages">
+       <property name="tabPosition">
+        <enum>QTabWidget::South</enum>
+       </property>
+       <property name="currentIndex">
+        <number>0</number>
+       </property>
+       <widget class="QWidget" name="tab_2">
+        <attribute name="title">
+         <string>+</string>
+        </attribute>
+       </widget>
+      </widget>
      </item>
     </layout>
    </item>
