Added Major changes to rstats_main dialog
Updated common utilities with bugfixes and new features
Renamed module_definitions to .rstats_module_properties in RStats
Added .rstats_script_provider folder to config in RStats
Moved config dialogs/forms from rstats_main to rstats_ui
Refactored/cleaned up code for loading module properties in rstats_main
dialog
Added support for automatic key binding definitions to main dialog
Updated settings dialog to contain script provider settings and
eventually theme settings

--- a/products/RAT-STATS/rstats_ui/src/UIRStatsSettingsManager.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsSettingsManager.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>406</width>
-    <height>270</height>
+    <width>586</width>
+    <height>466</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,7 +15,63 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <layout class="QGridLayout" name="m_lytMain"/>
+    <widget class="QTabWidget" name="m_twSettings">
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <widget class="QWidget" name="m_tbScriptProviders">
+      <attribute name="title">
+       <string>Script Providers</string>
+      </attribute>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QTableWidget" name="m_tblScriptProviders"/>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="m_btnNewScriptProvider">
+           <property name="text">
+            <string>Add New Script Provider...</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="m_tbThemes">
+      <attribute name="title">
+       <string>Themes</string>
+      </attribute>
+     </widget>
+    </widget>
    </item>
    <item>
     <widget class="QFrame" name="horizontalFrame">
