--- a/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
+++ b/products/RAT-STATS/rstats_main/src/UIRStatsMain.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1024</width>
+    <width>859</width>
     <height>768</height>
    </rect>
   </property>
@@ -64,59 +64,11 @@
            </property>
           </widget>
          </item>
-         <item>
-          <widget class="QToolButton" name="m_btnNewCategory">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>New Category</string>
-           </property>
-           <property name="toolButtonStyle">
-            <enum>Qt::ToolButtonTextBesideIcon</enum>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QToolButton" name="m_btnEditCategory">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>Edit Category</string>
-           </property>
-           <property name="toolButtonStyle">
-            <enum>Qt::ToolButtonTextBesideIcon</enum>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QToolButton" name="m_btnRemoveCategory">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="text">
-            <string>Remove Category</string>
-           </property>
-           <property name="toolButtonStyle">
-            <enum>Qt::ToolButtonTextBesideIcon</enum>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
       </item>
       <item>
-       <widget class="QGroupBox" name="verticalGroupBox">
+       <widget class="QGroupBox" name="m_lytModules">
         <property name="title">
          <string>Modules:</string>
         </property>
@@ -133,11 +85,6 @@
          <property name="bottomMargin">
           <number>4</number>
          </property>
-         <item>
-          <widget class="QStackedWidget" name="m_stackModules">
-           <widget class="QWidget" name="m_tbModulesPage1" native="true"/>
-          </widget>
-         </item>
         </layout>
        </widget>
       </item>
@@ -150,16 +97,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1024</width>
-     <height>17</height>
+     <width>859</width>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="m_menuFile">
     <property name="title">
-     <string>File</string>
+     <string>RAT-STATS Menu</string>
     </property>
     <addaction name="m_actionSettings_Manager"/>
-    <addaction name="m_actionModule_Manager"/>
+    <addaction name="m_actionAdd_New_Module"/>
     <addaction name="separator"/>
     <addaction name="m_actionExit"/>
    </widget>
@@ -173,14 +120,27 @@
    <addaction name="m_menuFile"/>
    <addaction name="m_menuHelp"/>
   </widget>
+  <widget class="QToolBar" name="m_tlbCommands">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="m_actionSettings_Manager"/>
+   <addaction name="m_actionAdd_New_Module"/>
+   <addaction name="m_actionAbout_RAT_STATS_2017"/>
+   <addaction name="m_actionHelp_Topics"/>
+  </widget>
   <action name="m_actionSettings_Manager">
    <property name="text">
-    <string>Settings Manager</string>
+    <string>Settings...</string>
    </property>
-  </action>
-  <action name="m_actionModule_Manager">
-   <property name="text">
-    <string>Module Manager</string>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="m_actionExit">
@@ -196,6 +156,17 @@
   <action name="m_actionAbout_RAT_STATS_2017">
    <property name="text">
     <string>About RAT-STATS</string>
+   </property>
+  </action>
+  <action name="m_actionAdd_New_Module">
+   <property name="text">
+    <string>New Module...</string>
+   </property>
+   <property name="toolTip">
+    <string>Create a new module</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
    </property>
   </action>
  </widget>
