--- a/products/RAT-STATS/rstats_ui/src/UIRStatsLaunchConfigDialog.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsLaunchConfigDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>651</width>
-    <height>242</height>
+    <width>618</width>
+    <height>223</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -42,18 +42,27 @@
      </property>
      <item>
       <widget class="QFrame" name="verticalFrame">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
+        <property name="spacing">
+         <number>2</number>
+        </property>
         <property name="leftMargin">
-         <number>4</number>
+         <number>2</number>
         </property>
         <property name="topMargin">
-         <number>4</number>
+         <number>2</number>
         </property>
         <property name="rightMargin">
-         <number>4</number>
+         <number>2</number>
         </property>
         <property name="bottomMargin">
-         <number>4</number>
+         <number>2</number>
         </property>
         <item>
          <spacer name="verticalSpacer_2">
@@ -74,51 +83,105 @@
            <string>Module Icon</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
+           <property name="spacing">
+            <number>2</number>
+           </property>
            <property name="leftMargin">
-            <number>4</number>
+            <number>2</number>
            </property>
            <property name="topMargin">
-            <number>4</number>
+            <number>2</number>
            </property>
            <property name="rightMargin">
-            <number>4</number>
+            <number>2</number>
            </property>
            <property name="bottomMargin">
-            <number>4</number>
+            <number>2</number>
            </property>
            <item>
             <widget class="QLabel" name="m_lblNoIcon">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="font">
               <font>
-               <pointsize>14</pointsize>
+               <pointsize>12</pointsize>
               </font>
              </property>
              <property name="text">
               <string>No Icon Set</string>
              </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
+             </property>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="m_lblIcon">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
+            <layout class="QHBoxLayout" name="horizontalLayout_3">
+             <property name="leftMargin">
+              <number>4</number>
              </property>
-             <property name="minimumSize">
-              <size>
-               <width>64</width>
-               <height>64</height>
-              </size>
+             <property name="topMargin">
+              <number>4</number>
              </property>
-             <property name="text">
-              <string/>
+             <property name="rightMargin">
+              <number>4</number>
              </property>
-             <property name="scaledContents">
-              <bool>true</bool>
+             <property name="bottomMargin">
+              <number>4</number>
              </property>
-            </widget>
+             <item>
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QLabel" name="m_lblIcon">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="minimumSize">
+                <size>
+                 <width>64</width>
+                 <height>64</height>
+                </size>
+               </property>
+               <property name="text">
+                <string/>
+               </property>
+               <property name="scaledContents">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
            <item>
             <widget class="QPushButton" name="m_btnSetIcon">
@@ -322,6 +385,10 @@
   <tabstop>m_cmbTypes</tabstop>
   <tabstop>m_txtLocation</tabstop>
   <tabstop>m_btnBrowseLocation</tabstop>
+  <tabstop>m_txtArgs</tabstop>
+  <tabstop>m_chkShowConsole</tabstop>
+  <tabstop>m_btnSetIcon</tabstop>
+  <tabstop>m_btnSave</tabstop>
   <tabstop>m_btnLaunch</tabstop>
   <tabstop>m_btnCancel</tabstop>
  </tabstops>
