Updated format of xml modules to be consistent with other xml files Added dock to main window for module categories Updated RStatsModuleProperties to load/save newly formatted xml Added check for missing config dirs for properties. Creates them and prompts user with message.

--- a/products/RAT-STATS/rstats_ui/src/UIRStatsSettingsManager.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsSettingsManager.ui
@@ -62,7 +62,7 @@
    <item>
     <widget class="QGroupBox" name="verticalGroupBox_2">
      <property name="title">
-      <string>Script Provider Setup</string>
+      <string>Script Providers</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="leftMargin">
