--- a/products/RAT-STATS/rstats_modules/SingleStageRandomNumbers/src/UIRStatsSSRN.ui
+++ b/products/RAT-STATS/rstats_modules/SingleStageRandomNumbers/src/UIRStatsSSRN.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1024</width>
-    <height>697</height>
+    <height>768</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -678,7 +678,7 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>26</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -711,7 +711,7 @@
      <item>
       <widget class="QListWidget" name="m_lstErrorConsole">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Minimum">
+        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
@@ -719,21 +719,11 @@
        <property name="maximumSize">
         <size>
          <width>16777215</width>
-         <height>96</height>
+         <height>16777215</height>
         </size>
        </property>
        <property name="styleSheet">
-        <string notr="true">QListWidget
-{
-}
-QListWidget::item
-{
-	border:1px solid gray;
-	color:black;
-	background:#777;
-	height:24px;
-	padding:4px;
-}</string>
+        <string notr="true"/>
        </property>
       </widget>
      </item>
