--- a/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
+++ b/products/RAT-STATS/rstats_modules/stratified_variable_appraisal/src/UIRStatsSVA.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1010</width>
-    <height>766</height>
+    <width>1024</width>
+    <height>789</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -174,7 +174,16 @@
     </item>
    </layout>
   </widget>
-  <widget class="QDockWidget" name="dockWidget">
+  <widget class="QDockWidget" name="m_dockOptions">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::AllDockWidgetAreas</set>
+   </property>
+   <property name="windowTitle">
+    <string>Stratified Variable Appraisel Options:</string>
+   </property>
    <attribute name="dockWidgetArea">
     <number>1</number>
    </attribute>
@@ -198,34 +207,46 @@
         <number>4</number>
        </property>
        <item>
-        <widget class="QGroupBox" name="gridGroupBox_2">
+        <widget class="QFrame" name="horizontalFrame">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="title">
-          <string>Audit/Review Name:</string>
-         </property>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <property name="leftMargin">
-           <number>11</number>
-          </property>
-          <property name="topMargin">
-           <number>11</number>
-          </property>
-          <property name="rightMargin">
-           <number>11</number>
-          </property>
-          <property name="bottomMargin">
-           <number>11</number>
-          </property>
-          <item row="0" column="0">
-           <widget class="QLineEdit" name="m_txtAuditName">
-            <property name="text">
-             <string/>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QGroupBox" name="gridGroupBox_2">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
             </property>
+            <property name="title">
+             <string>Audit/Review Name:</string>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_2">
+             <property name="leftMargin">
+              <number>11</number>
+             </property>
+             <property name="topMargin">
+              <number>11</number>
+             </property>
+             <property name="rightMargin">
+              <number>11</number>
+             </property>
+             <property name="bottomMargin">
+              <number>11</number>
+             </property>
+             <item row="0" column="0">
+              <widget class="QLineEdit" name="m_txtAuditName">
+               <property name="text">
+                <string/>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -298,140 +319,42 @@
           <item row="2" column="0">
            <widget class="QRadioButton" name="m_rdbDifference">
             <property name="text">
-             <string>Difference Values</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QRadioButton" name="m_rdbExamined">
-            <property name="text">
-             <string>Examined Values</string>
+             <string>Difference</string>
             </property>
            </widget>
           </item>
           <item row="1" column="0">
            <widget class="QRadioButton" name="m_rdbAudited">
             <property name="text">
-             <string>Audited Values</string>
+             <string>Audited</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QRadioButton" name="m_rdbExamined">
+            <property name="text">
+             <string>Examined</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1">
            <widget class="QRadioButton" name="m_rdbExaminedAndAudited">
             <property name="text">
-             <string>Examined and Audited Values</string>
+             <string>Examined and Audited</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="QRadioButton" name="m_rdbAuditedAndDifference">
             <property name="text">
-             <string>Audited and Difference Values</string>
+             <string>Audited and Difference</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
            <widget class="QRadioButton" name="m_rdbExaminedAndDifference">
             <property name="text">
-             <string>Examined and Difference Values</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="verticalGroupBox_2">
-         <property name="title">
-          <string>Data Input Table:</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_6">
-          <property name="leftMargin">
-           <number>11</number>
-          </property>
-          <property name="topMargin">
-           <number>11</number>
-          </property>
-          <property name="rightMargin">
-           <number>11</number>
-          </property>
-          <property name="bottomMargin">
-           <number>11</number>
-          </property>
-          <item>
-           <widget class="QTableWidget" name="m_tblInputData">
-            <property name="rowCount">
-             <number>0</number>
-            </property>
-            <attribute name="horizontalHeaderStretchLastSection">
-             <bool>true</bool>
-            </attribute>
-            <attribute name="verticalHeaderVisible">
-             <bool>true</bool>
-            </attribute>
-            <column>
-             <property name="text">
-              <string>Universe Size</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Sample Size</string>
-             </property>
-            </column>
-            <column>
-             <property name="text">
-              <string>Number with Characteristics of Interest</string>
-             </property>
-            </column>
-           </widget>
-          </item>
-          <item>
-           <layout class="QGridLayout" name="gridLayout_5">
-            <property name="leftMargin">
-             <number>4</number>
-            </property>
-            <property name="topMargin">
-             <number>4</number>
-            </property>
-            <property name="rightMargin">
-             <number>4</number>
-            </property>
-            <property name="bottomMargin">
-             <number>4</number>
-            </property>
-            <item row="0" column="0">
-             <widget class="QPushButton" name="m_btnImportData">
-              <property name="text">
-               <string>Import Input Data</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3">
-             <widget class="QPushButton" name="m_btnExportData">
-              <property name="text">
-               <string>Export Input Data</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <widget class="QPushButton" name="m_btnContinue">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="text">
-             <string>Continue</string>
-            </property>
-            <property name="iconSize">
-             <size>
-              <width>32</width>
-              <height>32</height>
-             </size>
+             <string>Examined and Difference</string>
             </property>
            </widget>
           </item>
@@ -532,6 +455,25 @@
            </widget>
           </item>
           <item>
+           <widget class="QPushButton" name="m_btnContinue">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Generate</string>
+            </property>
+            <property name="iconSize">
+             <size>
+              <width>32</width>
+              <height>32</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="m_btnExit">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -558,25 +500,112 @@
     </layout>
    </widget>
   </widget>
+  <widget class="QDockWidget" name="m_dockSampleSizeInput">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <property name="floating">
+    <bool>false</bool>
+   </property>
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::AllDockWidgetAreas</set>
+   </property>
+   <property name="windowTitle">
+    <string>Sample Size Input Table:</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3">
+    <layout class="QGridLayout" name="gridLayout_5">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="m_btnImportSampleSizeData">
+       <property name="text">
+        <string>Import Sizes</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QTableWidget" name="m_tblSampleSizeData">
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::NoSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectItems</enum>
+       </property>
+       <property name="rowCount">
+        <number>0</number>
+       </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+       <attribute name="verticalHeaderVisible">
+        <bool>true</bool>
+       </attribute>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QDockWidget" name="m_dockSampleDataInput">
+   <property name="features">
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
+   </property>
+   <property name="windowTitle">
+    <string>Sample Data Input Table:</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_2">
+    <layout class="QVBoxLayout" name="verticalLayout_6">
+     <item>
+      <widget class="QPushButton" name="m_btnImportSampleInputData">
+       <property name="text">
+        <string>Import Samples</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTableWidget" name="m_tblSampleInputData">
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::SingleSelection</enum>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectColumns</enum>
+       </property>
+       <attribute name="horizontalHeaderStretchLastSection">
+        <bool>true</bool>
+       </attribute>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
  </widget>
  <tabstops>
-  <tabstop>m_rdbDifference</tabstop>
-  <tabstop>m_btnExportData</tabstop>
-  <tabstop>m_rdbExaminedAndAudited</tabstop>
-  <tabstop>m_txtAuditName</tabstop>
-  <tabstop>m_tblInputData</tabstop>
-  <tabstop>m_spnStrata</tabstop>
-  <tabstop>m_tabOutput</tabstop>
-  <tabstop>m_btnImportData</tabstop>
-  <tabstop>m_rdbAudited</tabstop>
   <tabstop>m_rdbExamined</tabstop>
-  <tabstop>m_rdbExaminedAndDifference</tabstop>
-  <tabstop>m_rdbAuditedAndDifference</tabstop>
+  <tabstop>m_rdbDifference</tabstop>
+  <tabstop>m_tabOutput</tabstop>
+  <tabstop>m_rdbAudited</tabstop>
   <tabstop>m_chkTextOutput</tabstop>
-  <tabstop>m_chkExcelAccessOutput</tabstop>
+  <tabstop>m_txtAuditName</tabstop>
+  <tabstop>m_spnStrata</tabstop>
   <tabstop>m_btnExit</tabstop>
   <tabstop>m_btnHelp</tabstop>
-  <tabstop>m_btnContinue</tabstop>
+  <tabstop>m_chkExcelAccessOutput</tabstop>
  </tabstops>
  <resources/>
  <connections/>
