--- a/products/RAT-STATS/rstats_ui/src/UIRStatsWorkbook.ui
+++ b/products/RAT-STATS/rstats_ui/src/UIRStatsWorkbook.ui
@@ -15,6 +15,19 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <widget class="QLabel" name="label">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Available Worksheets:</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -34,7 +47,14 @@
         <number>4</number>
        </property>
        <item>
-        <widget class="QListWidget" name="m_lstWorksheets"/>
+        <widget class="QListWidget" name="m_lstWorksheets">
+         <property name="minimumSize">
+          <size>
+           <width>192</width>
+           <height>0</height>
+          </size>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
