Removed accidental project space pollution with cmake generated files Updated RStatsUAA project with new UI features and complete algorithm Updated utility functions with new Bankers Rounding algorithm class for VB simulation Updated RStatsWorksheet to generate evenly spaced output strings

--- a/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
+++ b/products/RAT-STATS/rstats_modules/single_stage_random_numbers/src/UIRStatsSSRN.ui
@@ -702,7 +702,7 @@
   </widget>
   <action name="actionRecent">
    <property name="text">
-    <string>&amp;Recent</string>
+    <string>&amp;Recently Used</string>
    </property>
   </action>
   <action name="actionExit">
